trunk/Archive2/dc/16484c422657a3/output
main.cpp: In function 'int main()':
main.cpp:21:21: error: cannot convert 'Derived::Test' to 'Base::Test' for argument '1' to 'void f(Base::Test)'
     f(Derived::TestA);
                     ^
main.cpp:22:21: error: cannot convert 'Derived::Test' to 'Base::Test' for argument '1' to 'void f(Base::Test)'
     f(Derived::TestB);
                     ^
1
